# PortfolioProjects

./: AB Testing.py  Danny's Diner SQL Case Study.sql  Data Cleaning.sql  Excel Project Dataset.xlsx  NYC Water Quality Analysis.py  Project - Data Professional Survey Breakdown.pbix  README.md  The Covid Project.sql  ecom analysis.sql  proj3.py
Fraud-Risk-Decision-System/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
Fraud-Risk-Decision-System/app/: streamlit_app.py
Fraud-Risk-Decision-System/artifacts/: run_manifest.json
Fraud-Risk-Decision-System/configs/: decision_policy.json  model.json
Fraud-Risk-Decision-System/data/: README.md
Fraud-Risk-Decision-System/data/processed/: quality_summary.json
Fraud-Risk-Decision-System/data/raw/: source_metadata.json
Fraud-Risk-Decision-System/docs/: data_dictionary.md  design_decisions.md  runbook.md
Fraud-Risk-Decision-System/notebooks/: 01_results_walkthrough.ipynb  README.md
Fraud-Risk-Decision-System/reports/: README.md  model_card.md  risk_memo.md
Fraud-Risk-Decision-System/reports/metrics/: candidate_comparison.csv  confusion_by_amount_band.csv  (+7 more)
Fraud-Risk-Decision-System/scripts/: bootstrap_database.py  download_data.py  generate_reports.py  ingest_postgres.py  prepare_data.py  train_and_evaluate.py
Fraud-Risk-Decision-System/tests/: conftest.py  test_config.py  test_data_contract.py  test_data_io.py  test_decision_policy.py  test_evaluation.py  test_features.py  test_modeling.py  test_monitoring.py  test_repository_contract.py  test_splitting.py
(+23 files in other folders)
